Added framework that enables HCPs and patients to view the page for personal representatives

--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -162,6 +162,8 @@ a {
 							<li><a href="#">Add Patient -- Not Implemented</a></li>
 							<li><a href="/iTrust2/hcp/documentOfficeVisit.html"
 								id="documentOfficeVisit">Document Office Visit</a></li>
+							<li><a href="/iTrust2/hcp/personalRepresentatives" 
+								id="personalRepresentatives">Patient Personal Representatives</a></li>
 						</ul>
 					</li>
 					<li class="dropdown"><a class="dropdown-toggle"
@@ -186,8 +188,10 @@ a {
 							<li><a href="/iTrust2/patient/viewAppointmentRequests"
 								id="viewrequests-patient">View Appointment Requests</a></li>
 							<li><a href="/iTrust2/patient/viewOfficeVisits">Past Office Visits</a></li>
-							<li><a href="/iTrust2/patient/viewDiagnoses" id="viewDiagnoses">Diagnoses</a></li>
-							<li><a href="/iTrust2/patient/viewPrescriptions" id="viewPrescriptions">Prescriptions</a></li>
+							<li><a href="/iTrust2/patient/viewDiagnoses" 
+								id="viewDiagnoses">Diagnoses</a></li>
+							<li><a href="/iTrust2/patient/viewPrescriptions" 
+								id="viewPrescriptions">Prescriptions</a></li>
 						</ul>
 					</li>
 					<li class="dropdown"><a class="dropdown-toggle"
@@ -196,6 +200,9 @@ a {
 							<li><a href="/iTrust2/patient/editDemographics"
 								id="editdemographics-patient">Edit Demographics</a></li>
 						</ul>
+					</li>
+					<li><a href="/iTrust2/patient/personalRepresentatives" 
+								id="personalRepresentatives">Representatives</a>
 					</li>
 				</ul>
 				<ul id="extra-dropdown" class="nav navbar-nav">
