--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -163,7 +163,7 @@ a {
 							<li><a href="/iTrust2/hcp/documentOfficeVisit.html"
 								id="documentOfficeVisit">Document Office Visit</a></li>
 							<li><a href="/iTrust2/hcp/personalRepresentatives" 
-								id="personalRepresentatives">Patient Personal Representatives</a></li>
+								id="personalRepresentatives">Personal Representatives</a></li>
 						</ul>
 					</li>
 					<li class="dropdown"><a class="dropdown-toggle"
@@ -202,7 +202,7 @@ a {
 						</ul>
 					</li>
 					<li><a href="/iTrust2/patient/personalRepresentatives" 
-								id="personalRepresentatives">Representatives</a>
+								id="personalRepresentatives">Personal Representatives</a>
 					</li>
 				</ul>
 				<ul id="extra-dropdown" class="nav navbar-nav">
