--- a/iTrust2/src/main/resources/views/patient/personalRepresentatives.html
+++ b/iTrust2/src/main/resources/views/patient/personalRepresentatives.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns:th="http://www.thymeleaf.org">
 	<head th:include="layout :: head(title=~{::title},links=~{})">
-	<title>View Diagnoses</title>
+	<title>View Personal Representatives</title>
 	
 	<!-- Angular and Bootstrap files  -->
 	<link rel="stylesheet"
