--- a/iTrust2/src/main/resources/views/patient/personalRepresentatives.html
+++ b/iTrust2/src/main/resources/views/patient/personalRepresentatives.html
@@ -30,7 +30,42 @@
 					$scope.diagoses = [];
 					$scope.message = "Unable to display diagnoses";
 				});
+			
+				$scope.isValid = true;
+				
+				$scope.declareRep = function(repUsername) {
+					$http.host("/iTrust2/api/v1/reps/" + repUsername).then(
+							function(response) {
+								$scope.representsMe.push(repUsername);
+								$scope.message = "";
+							}, function(rejection) {
+								$scope.message = "Could not add personal representative."
+							});
+				}
+				
+				$scope.underclaseRep = function(username) {
+					$http.post("/iTrust2/api/v1/reps/" + username).then(
+							function(response) {
+								var index = representsMe.indexOf(username);
+								$scope.representsMe.remove(index);
+								$scope.message = "";
+							}, function(rejection) {
+								$scope.message = "Could not remove personal representative."
+							});
+				}
+				
+				$scope.undeclareSelfAsRep = function(username) {
+					$http.post("iTrust2/api/v1/reps/" + username).then(
+							function(response) { 
+								var index = iRepresent.indexOf(username);
+								$scope.iRepresent.remove(index);
+								$scope.message = "";
+							}, function(rejection) {
+								$scope.message = "Could not remove self as personal representative."
+							});
+				}
 
+				
 			});
 		</script>
 
@@ -68,12 +103,12 @@
 										<div class="row">
 											<div class="col-md-7">
 												<input type="text" class="form-control"
-													placeholder="Patient MID" name="repUsername" ng-model="addRep"
-													required />
-													<br>
+													placeholder="Patient MID" name="repUsername"
+													ng-model="addRep" required /> <br>
 												<button type="submit" class="btn btn-success"
 													ng-disabled="!viewLogForm.$valid" name="submit">Add
 													Representative</button>
+												<span ng-if="!isValid"> {{errorMessage}} </span>
 											</div>
 
 										</div>
@@ -86,7 +121,7 @@
 
 								</div>
 							</form>
-							
+
 							<form class="form-horizontal" role="form" name="viewLogForm"
 								ng-submit="undelcareRep()">
 								<br>
@@ -99,12 +134,12 @@
 										<div class="row">
 											<div class="col-md-7">
 												<input type="text" class="form-control"
-													placeholder="Patient MID" name="removeUsername" ng-model="removeRep"
-													required />
-													<br>
+													placeholder="Patient MID" name="removeUsername"
+													ng-model="removeRep" required /> <br>
 												<button type="submit" class="btn btn-success"
 													ng-disabled="!viewLogForm.$valid" name="submit">Remove
 													Representative</button>
+												<span ng-if="!isValid"> {{errorMessage}} </span>
 											</div>
 
 										</div>
@@ -144,12 +179,12 @@
 										<div class="row">
 											<div class="col-md-7">
 												<input type="text" class="form-control"
-													placeholder="Patient MID" name="undeclareUsername" ng-model="undeclaredSelf"
-													required />
-													<br>
+													placeholder="Patient MID" name="undeclareUsername"
+													ng-model="undeclaredSelf" required /> <br>
 												<button type="submit" class="btn btn-success"
 													ng-disabled="!viewLogForm.$valid" name="submit">Remove
 													Self</button>
+												<span ng-if="!isValid"> {{errorMessage}} </span>
 											</div>
 
 										</div>
