--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -139,6 +139,7 @@ a {
 									User</a></li>
 							<li><a href="/iTrust2/admin/drugs" id="drugs">Manage Drugs</a></li>
 							<li><a href="/iTrust2/admin/manageICDCodes" id="manageICDCodes">Manage ICD-10 Codes</a></li>
+							<li><a href="/iTrust2/admin/vaccinations" id="vaccinations">Manage Vaccinations</a></li>
 						</ul>
 					</li>
 					<li class="dropdown"><a class="dropdown-toggle"
