--- a/iTrust2/src/main/resources/views/patient/personalRepresentatives.html
+++ b/iTrust2/src/main/resources/views/patient/personalRepresentatives.html
@@ -35,9 +35,9 @@
 				$scope.isValid = true;
 				
 				$scope.declareRep = function(repUsername) {
-					$http.post("/iTrust2/api/v1/reps/" + repUsername).then(
+					$http.post("/iTrust2/api/v1/patient/declareRep/" + repUsername).then(
 						function(response) {
-							$scope.representsMe.push(repUsername);
+							$scope.representsMe.push(response.data);
 							$scope.message = "";
 						}, function(rejection) {
 							$scope.message = "Could not add personal representative."
@@ -45,9 +45,9 @@
 				}
 
 				$scope.undeclareRep = function(username) {
-					$http.post("/iTrust2/api/v1/reps/"+ username).then(
+					$http.post("/iTrust2/api/v1/patient/undeclareRep/0-" + username).then(
 						function(response) {
-							var index = representsMe.indexOf(username);
+							var index = representsMe.indexOf(reponse.data);
 							$scope.representsMe.remove(index);
 							$scope.message = "";
 						}, function(rejection) {
@@ -56,9 +56,9 @@
 				}
 
 				$scope.undeclareSelfAsRep = function(username) {
-					$http.post("iTrust2/api/v1/reps/" + username).then(
+					$http.post("iTrust2/api/v1/patient/undeclareRep/1-" + username).then(
 						function(response) {
-							var index = iRepresent.indexOf(username);
+							var index = iRepresent.indexOf(response.data);
 							scope.iRepresent.remove(index);
 							$scope.message = "";
 						}, function(rejection) {
@@ -102,14 +102,14 @@
 												Representative</div>
 											<div class="panel-body">
 												<form class="form-horizontal" role="form" name="declareRepForm"
-													ng-submit="delcareRep()">
+													ng-submit="declareRep(declareUsername)">
 
 													<!-- Patient MID -->
 													<div class="col-md-8">
 														<div class="row">
 															<input type="text" class="form-control"
 																placeholder="Patient MID" name="declareUsername" 
-																required />
+																ng-model="declareUsername" required />
 														</div>
 													</div>
 
@@ -137,14 +137,14 @@
 												Representative</div>
 											<div class="panel-body">
 												<form class="form-horizontal" role="form" name="undeclareRepForm"
-													ng-submit="undelcareRep()">
+													ng-submit="undeclareRep(undeclareUsername)">
 
 													<!-- Patient MID -->
 													<div class="col-md-8">
 														<div class="row">
 															<input type="text" class="form-control"
 																placeholder="Patient MID" name="undeclareUsername" 
-																required />
+																ng-model="undeclareUsername" required />
 														</div>
 													</div>
 
@@ -188,14 +188,14 @@
 												Representative</div>
 											<div class="panel-body">
 												<form class="form-horizontal" role="form" name="undeclareSelfRepForm"
-													ng-submit="undeclareSelfAsRep()">
+													ng-submit="undeclareSelfAsRep(undeclareSelfUsername)">
 
 													<!-- Patient MID -->
 													<div class="col-md-8">
 														<div class="row">
 															<input type="text" class="form-control"
 																placeholder="Patient MID" name="undeclareSelfUsername" 
-																required />
+																ng-model="undeclareSelfUsername" required />
 														</div>
 													</div>
 
