Added line of code in the data generator that creates a patient object
that is similar to the patient user that was also created, fixed small
error in personalRepresentative html page

--- a/iTrust2/src/main/resources/views/patient/personalRepresentatives.html
+++ b/iTrust2/src/main/resources/views/patient/personalRepresentatives.html
@@ -90,7 +90,7 @@
 							</div>
 							<div class="panel-body">
 								<ul>
-									<li ng-repeat="item in representMe">{{item}}</li>
+									<li ng-repeat="item in representsMe">{{item}}</li>
 								</ul>
 
 
